deployments/workloads/media/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: media-tls-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-1
      hostname: "stream.nilsherzig.com"
      protocol: HTTPS
      port: 9090
      tls:
        mode: Terminate
        certificateRefs:
          - name: stream-nilsherzig-com
